--- a/css/bc-youth-council.webflow.css
+++ b/css/bc-youth-council.webflow.css
@@ -146,19 +146,21 @@ a {
   position: absolute;
   left: 0px;
   top: 0px;
-  z-index: 999999;
+  z-index: 500;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: auto;
+  margin-bottom: 0px;
   padding: 0px 10vw;
   border: 1px none #000;
   background-color: #000;
 }
 
 .nav {
+  z-index: 500;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -261,7 +263,7 @@ a {
 }
 
 .button {
-  display: inline-block;
+  display: none;
   margin-right: 0px;
   padding: 20px 40px;
   border-radius: 3px;
@@ -1272,7 +1274,7 @@ a {
 .buttondonate {
   display: inline-block;
   margin-right: 0px;
-  margin-left: 10px;
+  margin-left: 0px;
   padding: 20px 40px;
   border-radius: 3px;
   background-color: #000;
@@ -1300,6 +1302,92 @@ a {
 .buttondonate.form-button:hover {
   background-color: #000;
   color: #fff;
+}
+
+.container {
+  margin-bottom: 1px;
+  color: red;
+}
+
+.notice-bar {
+  display: block;
+  margin-bottom: 0px;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
+}
+
+.section-3 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 0px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.notification-bar {
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: auto;
+  z-index: 1000;
+  padding: 20px;
+  background-color: #2f00ff;
+  color: #6e2ed8;
+}
+
+.notification-bar-container {
+  position: relative;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.message {
+  color: #fff;
+  font-size: 20px;
+}
+
+.link {
+  color: #fff;
+}
+
+.close-notification {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  -webkit-transform: translate(0px, -50%);
+  -ms-transform: translate(0px, -50%);
+  transform: translate(0px, -50%);
+  color: #fff;
+  font-size: 50px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 991px) {
