--- a/css/bc-youth-council.webflow.css
+++ b/css/bc-youth-council.webflow.css
@@ -799,7 +799,7 @@ a {
 }
 
 .person-block.hiddenblock {
-  display: none;
+  display: block;
 }
 
 .image-5 {
@@ -1133,6 +1133,7 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  border-top: 1px solid #000;
 }
 
 .utility-page-wrap {
@@ -2030,28 +2031,49 @@ a {
   }
 }
 
+#w-node-5696a71da7ab-47a46d81 {
+  -ms-grid-row-align: center;
+  align-self: center;
+  -ms-grid-column-align: center;
+  justify-self: center;
+  -ms-grid-column-span: 1;
+  grid-column-end: span 1;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-row-span: 1;
+  grid-row-end: span 1;
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
+}
+
 #w-node-c0b377545e38-47a46d81 {
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
   justify-self: center;
-  -ms-grid-column: 1;
-  grid-column-start: 1;
-  -ms-grid-row: 1;
-  grid-row-start: 1;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
   -ms-grid-column-span: 1;
-  grid-column-end: 2;
+  grid-column-end: span 1;
   -ms-grid-row-span: 1;
-  grid-row-end: 2;
+  grid-row-end: span 1;
 }
 
-#w-node-5696a71da7ab-47a46d81 {
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
+#w-node-7822547a73a9-47a46d81 {
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
   justify-self: center;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
+  -ms-grid-column-span: 1;
+  grid-column-end: span 1;
+  -ms-grid-row-span: 1;
+  grid-row-end: span 1;
 }
 
 #w-node-025736557e54-47a46d81 {
@@ -2059,14 +2081,14 @@ a {
   align-self: center;
   -ms-grid-column-align: center;
   justify-self: center;
-  -ms-grid-column: 2;
-  grid-column-start: 2;
-  -ms-grid-row: 2;
-  grid-row-start: 2;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
   -ms-grid-column-span: 1;
-  grid-column-end: 3;
+  grid-column-end: span 1;
   -ms-grid-row-span: 1;
-  grid-row-end: 3;
+  grid-row-end: span 1;
 }
 
 #w-node-c5fa2bf0a1fc-47a46d81 {
@@ -2074,29 +2096,14 @@ a {
   align-self: center;
   -ms-grid-column-align: center;
   justify-self: center;
-  -ms-grid-column: 1;
-  grid-column-start: 1;
-  -ms-grid-row: 3;
-  grid-row-start: 3;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
   -ms-grid-column-span: 1;
-  grid-column-end: 2;
+  grid-column-end: span 1;
   -ms-grid-row-span: 1;
-  grid-row-end: 4;
-}
-
-#w-node-a68b0e050697-47a46d81 {
-  -ms-grid-row-align: center;
-  align-self: center;
-  -ms-grid-column-align: center;
-  justify-self: center;
-  -ms-grid-column: 1;
-  grid-column-start: 1;
-  -ms-grid-row: 2;
-  grid-row-start: 2;
-  -ms-grid-column-span: 1;
-  grid-column-end: 2;
-  -ms-grid-row-span: 1;
-  grid-row-end: 3;
+  grid-row-end: span 1;
 }
 
 #w-node-bf9155f9f14f-47a46d81 {
@@ -2104,38 +2111,23 @@ a {
   align-self: center;
   -ms-grid-column-align: center;
   justify-self: center;
-  -ms-grid-column: 2;
-  grid-column-start: 2;
-  -ms-grid-row: 3;
-  grid-row-start: 3;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
   -ms-grid-column-span: 1;
-  grid-column-end: 3;
+  grid-column-end: span 1;
   -ms-grid-row-span: 1;
-  grid-row-end: 4;
+  grid-row-end: span 1;
 }
 
-#w-node-eb976b4f64f9-d3a46da3 {
+#w-node-7260e3ddc7e8-d3a46da3 {
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   -ms-grid-column-align: center;
   justify-self: center;
-}
-
-#w-node-eb976b4f6501-d3a46da3 {
-  -ms-grid-row-align: center;
-  align-self: center;
-  -ms-grid-column-align: center;
-  justify-self: center;
-  -ms-grid-column: 2;
-  grid-column-start: 2;
-  -ms-grid-row: 1;
-  grid-row-start: 1;
-  -ms-grid-column-span: 1;
-  grid-column-end: 3;
-  -ms-grid-row-span: 1;
-  grid-row-end: 2;
 }
 
 #w-node-e34b7cfd1f8f-6ca46db4 {
@@ -2147,7 +2139,39 @@ a {
   justify-self: center;
 }
 
+#w-node-ae0caa542ede-2b19a2ee {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  -ms-grid-column-align: center;
+  justify-self: center;
+}
+
+#w-node-e34b7cfd1f8f-1d7635af {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  -ms-grid-column-align: center;
+  justify-self: center;
+}
+
 @media screen and (max-width: 991px) {
+  #w-node-5696a71da7ab-47a46d81 {
+    -ms-grid-column-span: 1;
+    grid-column-end: span 1;
+    -ms-grid-column: span 1;
+    grid-column-start: span 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: span 1;
+    -ms-grid-row: span 1;
+    grid-row-start: span 1;
+    -ms-grid-row-align: center;
+    align-self: center;
+    -ms-grid-column-align: center;
+    justify-self: center;
+  }
   #w-node-c0b377545e38-47a46d81 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
@@ -2160,15 +2184,15 @@ a {
     -ms-grid-row-align: center;
     align-self: center;
   }
-  #w-node-5696a71da7ab-47a46d81 {
-    -ms-grid-column-span: 1;
-    grid-column-end: span 1;
+  #w-node-7822547a73a9-47a46d81 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
-    -ms-grid-row-span: 1;
-    grid-row-end: span 1;
+    -ms-grid-column-span: 1;
+    grid-column-end: span 1;
     -ms-grid-row: span 1;
     grid-row-start: span 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: span 1;
     -ms-grid-row-align: center;
     align-self: center;
     -ms-grid-column-align: center;
@@ -2202,20 +2226,6 @@ a {
     -ms-grid-column-align: center;
     justify-self: center;
   }
-  #w-node-a68b0e050697-47a46d81 {
-    -ms-grid-row-align: center;
-    align-self: center;
-    -ms-grid-column-align: center;
-    justify-self: center;
-    -ms-grid-column: span 1;
-    grid-column-start: span 1;
-    -ms-grid-row: span 1;
-    grid-row-start: span 1;
-    -ms-grid-column-span: 1;
-    grid-column-end: span 1;
-    -ms-grid-row-span: 1;
-    grid-row-end: span 1;
-  }
   #w-node-bf9155f9f14f-47a46d81 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
@@ -2227,20 +2237,6 @@ a {
     grid-row-end: span 1;
     -ms-grid-row-align: start;
     align-self: start;
-  }
-  #w-node-eb976b4f6501-d3a46da3 {
-    -ms-grid-row-align: center;
-    align-self: center;
-    -ms-grid-column-align: center;
-    justify-self: center;
-    -ms-grid-column: span 1;
-    grid-column-start: span 1;
-    -ms-grid-row: span 1;
-    grid-row-start: span 1;
-    -ms-grid-column-span: 1;
-    grid-column-end: span 1;
-    -ms-grid-row-span: 1;
-    grid-row-end: span 1;
   }
 }
 
