--- a/css/bc-youth-council.webflow.css
+++ b/css/bc-youth-council.webflow.css
@@ -1238,7 +1238,7 @@ a {
   display: -ms-flexbox;
   display: flex;
   margin-top: 15px;
-  margin-bottom: 14px;
+  margin-bottom: 15px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -1251,8 +1251,7 @@ a {
 
 .button-campaign {
   display: inline-block;
-  margin-right: auto;
-  margin-left: auto;
+  margin: -5px auto 10px;
   padding: 20px 40px;
   border-radius: 3px;
   background-color: #000;
@@ -1565,6 +1564,42 @@ a {
   display: block;
 }
 
+.region-button {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 15px;
+  margin-bottom: 14px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-bottom: 2px solid #000;
+}
+
+.ba-applications {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-bottom: 2px solid #000;
+}
+
 @media screen and (max-width: 991px) {
   h2 {
     font-size: 34px;
@@ -1840,6 +1875,9 @@ a {
     -ms-grid-rows: auto auto;
     grid-template-rows: auto auto;
   }
+  .environment-grid {
+    display: none;
+  }
   .enviro-person-block {
     display: block;
     height: auto;
@@ -2068,10 +2106,7 @@ a {
     text-align: center;
   }
   .button {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
+    display: none;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -2087,6 +2122,7 @@ a {
     align-items: center;
     -webkit-align-self: center;
     -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
     -webkit-box-flex: 0;
     -webkit-flex: 0 auto;
@@ -2259,8 +2295,9 @@ a {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 15px;
-    margin-left: 0px;
+    margin-top: 0px;
+    margin-right: auto;
+    margin-left: auto;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -2317,6 +2354,20 @@ a {
   }
   .campaign-people {
     height: auto;
+  }
+  .region-button {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .ba-applications {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 
