--- a/css/bc-youth-council.webflow.css
+++ b/css/bc-youth-council.webflow.css
@@ -1445,10 +1445,7 @@ a {
 }
 
 .southern-interior-people {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   width: 100%;
   height: auto;
   margin-bottom: 0px;
@@ -1564,11 +1561,8 @@ a {
   display: block;
 }
 
-.region-button {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+.islands-button {
+  display: none;
   margin-top: 15px;
   margin-bottom: 14px;
   -webkit-box-pack: center;
@@ -1625,6 +1619,21 @@ a {
   margin-bottom: 15px;
   font-size: 24px;
   font-weight: 300;
+}
+
+.si-region-button {
+  display: none;
+  margin-top: 15px;
+  margin-bottom: 14px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-bottom: 2px solid #000;
 }
 
 @media screen and (max-width: 991px) {
@@ -2382,7 +2391,7 @@ a {
   .campaign-people {
     height: auto;
   }
-  .region-button {
+  .islands-button {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -2398,6 +2407,13 @@ a {
   }
   .campaign-people-enviro {
     height: auto;
+  }
+  .si-region-button {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 }
 
