Updating Student Reps description

--- a/css/bc-youth-council.webflow.css
+++ b/css/bc-youth-council.webflow.css
@@ -643,6 +643,7 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  color: #000;
   -o-object-fit: fill;
   object-fit: fill;
 }
